<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:contentDescription="@string/cd_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/list"
        android:icon="@drawable/ic_list"
        android:contentDescription="@string/cd_list"
        android:title="@string/title_list" />
    <item
        android:id="@+id/home2"
        android:icon="@drawable/ic_home"
        android:contentDescription="@string/cd_home"
        android:title="Home2" />
    <item
        android:id="@+id/form"
        android:icon="@drawable/ic_feedback"
        android:contentDescription="@string/cd_form"
        android:title="@string/title_register" />
    <item
        android:id="@+id/home3"
        android:icon="@drawable/ic_home"
        android:contentDescription="@string/cd_home"
        android:title="Home3" />
</menu>
